Implemented Customer Account Information UI

--- a/src/app/components/customer/customer-nav/customer-nav.component.html
+++ b/src/app/components/customer/customer-nav/customer-nav.component.html
@@ -25,7 +25,7 @@
 
             <!-- structual directive denoted to show what is created on DOM once dropdown is triggered -->
             <ul *dropdownMenu class="dropdown-menu">
-              <li class="dropdown-item">My Profile</li>
+              <li class="dropdown-item" (click)="showProfile()">My Profile</li>
               <li class="dropdown-item">Logout</li>
             </ul>
           </li>
