--- a/src/app/components/customer/customer-home/customer-home.component.html
+++ b/src/app/components/customer/customer-home/customer-home.component.html
@@ -1,6 +1,18 @@
 <app-customer-nav></app-customer-nav>
 <div style="background-color: white;" *ngIf="greeting.length > 0 && fullName.length > 0">
-  <div class="container show-padding">
-    <p class="display-4 mt-3" style="font-size: 32px;">{{greeting}} {{fullName}}</p>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12">
+        <p class="display-4 mt-3" style="font-size: 32px;">{{greeting}} {{fullName}}</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12">
+
+    </div>
   </div>
 </div>
