--- a/src/app/components/customer/customer-nav/customer-nav.component.html
+++ b/src/app/components/customer/customer-nav/customer-nav.component.html
@@ -9,6 +9,10 @@
         <li class="nav-item p-1">
           <a class="nav-link" [routerLink]="['/customer','home']" routerLinkActive="active">Home</a>
         </li>
+
+        <li class="nav-item p-1">
+          <a class="nav-link" [routerLink]="['/customer','rentals']" routerLinkActive="active">My Rentals</a>
+        </li>
       </ul>
       <ul class="navbar-nav ml-auto p-2">
         <div class="btn-group" dropdown>
