Implemented Login Success

--- a/src/app/components/customer/customer-nav/customer-nav.component.html
+++ b/src/app/components/customer/customer-nav/customer-nav.component.html
@@ -20,17 +20,17 @@
           <li class="nav-item p-1 user-handler">
             <span dropdownToggle>
               <!-- dropdownToggle used to denote the item that triggers the dropdown on/off -->
-              <img
-                src="https://images.pexels.com/photos/220453/pexels-photo-220453.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+              <img *ngIf="loggedInUser"
+                [src]="profilePicString"
                 width="45" height="55" style="border-radius: 50%;">
-              <span class="ml-2">John Doe</span>
+              <span class="ml-2" *ngIf="loggedInUser">{{loggedInUser.firstName}} {{loggedInUser.lastName}}</span>
               <i class="fas fa-caret-down ml-2"></i>
             </span>
 
             <!-- structual directive denoted to show what is created on DOM once dropdown is triggered -->
             <ul *dropdownMenu class="dropdown-menu">
               <li class="dropdown-item" (click)="showProfile()">My Profile</li>
-              <li class="dropdown-item">Logout</li>
+              <li class="dropdown-item" (click)="logout()">Logout</li>
             </ul>
           </li>
         </div>
