--- a/src/app/components/customer/customer-home/customer-home.component.html
+++ b/src/app/components/customer/customer-home/customer-home.component.html
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-12">
-        <p class="display-4 mt-3" style="font-size: 32px;">{{greeting}} {{fullName}}</p>
+        <p class="display-4 mt-3" style="font-size: 32px;" *ngIf="loggedInUser">{{greeting}} {{fullName}}</p>
       </div>
     </div>
   </div>
