--- a/src/app/components/guest/login/login.component.html
+++ b/src/app/components/guest/login/login.component.html
@@ -8,6 +8,9 @@
   <div class="row">
     <div class="col-sm-12">
       <div class="container">
+        <div *ngIf="isError" class="error-message">
+          {{errorMessage}}
+        </div>
         <form (ngSubmit)="handleLogin()" [formGroup]="theForm">
           <div class="form-group">
             <label for="emailAddressField" class="fonts">Email Address</label>
