--- a/src/app/components/shared/pop-up-notification/pop-up-notification.component.html
+++ b/src/app/components/shared/pop-up-notification/pop-up-notification.component.html
@@ -13,8 +13,7 @@
           <i class="fal fa-check-circle success-icon ml-2"></i>
         </div>
         <div class="col-sm-10" style="text-align: center;">
-          Your Account Has Been Created Successfully! Log In To Access Your Account! An Email Will Be Sent To Your
-          Email Address To Denote Confirmation
+          {{successMessage}}
         </div>
       </div>
     </div>
@@ -27,7 +26,7 @@
           <i class="fal fa-times-circle fail-icon ml-2"></i>
         </div>
         <div class="col-sm-10" style="text-align: center;">
-          <p>Account Not Created Successfully, Please Try Again</p>
+          <p>{{errorMessage}}</p>
         </div>
       </div>
       <div class="row" *ngIf="errorMessage">
