--- a/src/app/components/customer/customer-nav/customer-nav.component.css
+++ b/src/app/components/customer/customer-nav/customer-nav.component.css
@@ -10,8 +10,14 @@ a.nav-link.active {
   color: darkblue !important;
 }
 
+
+
 a.nav-link:hover{
   color: darkblue !important;
+}
+
+a.nav-link{
+  transition: color 0.5s;
 }
 
 .hover-action:hover {
