--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #f7fafc;
+  background-color: #ebecf09c;
   font-family: "Roboto", sans-serif;
 }
 
@@ -13,6 +13,10 @@ body {
   font-size: 12px;
 }
 
+.fonts {
+  font-weight: 500;
+}
+
 /* sets the width of scrollbar */
 ::-webkit-scrollbar {
   width: 10px;
@@ -20,22 +24,17 @@ body {
 
 /* sets the color of the overall scroll bar */
 ::-webkit-scrollbar-track {
-  background-color: rgba(148, 144, 144, 0.61);
+  background-color: rgba(148, 144, 144, 0.158);
 }
 
 /* shows scrollable content  */
 ::-webkit-scrollbar-thumb {
-  background-color: rgb(136, 136, 136);
+  background-color: rgba(136, 136, 136, 0.171);
   transition: background-color 0.5s;
 }
 
 ::-webkit-scrollbar-thumb:hover {
   background-color: rgb(92, 91, 91);
-}
-
-/* shows the up down scroll */
-::-webkit-scrollbar-button {
-  background-color: rgba(0, 0, 0, 0.788);
 }
 
 .cdk-overlay-container {
