--- a/src/app/components/customer/customer-home/customer-home.component.html
+++ b/src/app/components/customer/customer-home/customer-home.component.html
@@ -1,9 +1,9 @@
 <app-customer-nav></app-customer-nav>
-<div style="background-color: white;" *ngIf="greeting.length > 0 && fullName.length > 0">
+<div style="background-color: white;" *ngIf="loggedInUser">
   <div class="container">
     <div class="row">
       <div class="col-sm-12">
-        <p class="display-4 mt-3" style="font-size: 32px;" *ngIf="loggedInUser">{{greeting}} {{fullName}}</p>
+        <p class="display-4 mt-3" style="font-size: 32px;">{{greeting}} {{loggedInUser.firstName}}</p>
       </div>
     </div>
   </div>
