Created Auth Interceptor and Global Exception Handler For Authenticated Routes

--- a/src/app/components/shared/user-profile/user-profile.component.html
+++ b/src/app/components/shared/user-profile/user-profile.component.html
@@ -46,7 +46,7 @@
     <div class="col-sm-4">
       <div class="form-group">
         <label><b class="fonts">Age</b></label>
-        <input type="number" readonly value="" class="form-control">
+        <input type="number" readonly [value]="userAge" class="form-control">
       </div>
     </div>
 
@@ -63,14 +63,14 @@
     <div class="col-sm-6">
       <div class="form-group">
         <label><b class="fonts">Password</b></label>
-        <input type="password" value="" placeholder="Provide New Password (Required)" class="form-control">
+        <input type="password" value="" placeholder="Provide New Password" class="form-control">
       </div>
     </div>
 
     <div class="col-sm-6">
       <div class="form-group">
         <label><b class="fonts">Re-Enter Password</b></label>
-        <input type="password" value="" placeholder="Re-Enter Your New Password (Required)" class="form-control">
+        <input type="password" value="" placeholder="Re-Enter Your New Password" class="form-control">
       </div>
     </div>
   </div>
